--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="quotes">
     <p>人在生活中遇到不幸，没有什么比一门技艺会给人更好的安慰，因为当他一心钻研那门技艺时，船已不知不觉越过了重重危难</p>
     <div class="text5">Any advanced technology is equal to magic.</div>
-    <div class="flower" style="overflow: hidden;"><img src="images/2.jpg" style="width: 105px;margin:0px;padding:0px;margin-left: 30px;margin-top: 20px;"></div>
+    <div class="flower"><img src="images/2.jpg"></div>
   </div>
   <!--nav begin-->
   <div id="nav">
