--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
       <li></li>
       <li></li>
       <li></li>
-      <li></li>
-      <li></li>
+     
     </div>
     <div class="about_girl"><span><a href="#"><img src="images/girl.jpg"></a></span>
       <p>你不许玩游戏了......</p>
@@ -95,21 +94,21 @@
 </div>
 <div class="blank"></div>
 <div class="blog">
-  <figure> <a href="/"><img src="images/t01.jpg"></a>
-    <p><a href="/">Ô¸ÓÐÈËÅãÄãÒ»ÆðµßÅæÁ÷Àë</a></p>
-    <figcaption>ÓÐÒ»ÌìÍíÉÏÎÒÊÕµ½ÅóÓÑµÄÓÊ¼þ£¬ËûÎÊÎÒÔõÑù¿ÉÒÔ×î¿ìµØ°ÚÍÑ¼ÅÄ¯£¬ÎÒÏëÁËÏë²»ÖªµÀÓ¦¸ÃÔõÃ´»Ø´ðËû£¬ÒòÎªÎÒ´ÓÀ´Ã»ÓÐ°ÚÍÑ¹ýÕâ¸öÎÊÌâ£¬ÎÒÖ»ÄÜÈ¥Ï°¹ßËü£¬¾ÍÏñÏ°¹ßÉíÌåµÄÒ»²¿·Ö¡£</figcaption>
+  <figure><a href="/"><img src="images/html.jpg"></a>
+    <p><a href="/">HTML5</a></p>
+    <figcaption>万维网的核心语言、标准通用标记语言下的一个应用超文本标记语言（HTML）的第五次重大修改(这是一项推荐标准、外语原文：W3C Recommendation)</figcaption>
   </figure>
-  <figure> <a href="/"><img src="images/t02.jpg"></a>
-    <p><a href="/">ÄãÒªÈ¥ÏàÐÅ£¬Ã»ÓÐµ½²»ÁËµÄÃ÷Ìì</a></p>
-    <figcaption>²»¹ÜÄãÏÖÔÚÊÇÒ»¸öÈË×ßÔÚÒìÏçµÄ½ÖµÀÉÏÊ¼ÖÕÃ»ÓÐÕÒµ½Ò»Ë¿¹éÊô¸Ð£¬»¹ÊÇÄãÔÚ¸úÅóÓÑÃÇÒ»Æð³Ô·¹¿ªÐÄµØÐ¦×ÅµÄÊ±ºòÉÁ¹ýÒ»Ë¿ÂäÄ¯¡£</figcaption>
+  <figure> <a href="/"><img src="images/css.jpg"></a>
+    <p><a href="/">CSS3</a></p>
+    <figcaption>CSS3是CSS技术的升级版本，CSS3语言开发是朝着模块化发展的,把它分解为一些小的模块，更多新的模块也被加入进来。这些模块包括： 盒子模型、列表模块、超链接方式 、语言模块 、背景和边框 、文字特效 、多栏布局等。</figcaption>
   </figure>
-  <figure> <a href="/"><img src="images/t03.jpg"></a>
-    <p><a href="/">ÃÀÀöµÄ¼ë</a></p>
-    <figcaption>ÈÃÊÀ½çÓµÓÐËüµÄ½Å²½£¬ÈÃÎÒ±£ÓÐÎÒµÄ¼ë¡£µ±À£ÀÃÒÑ¼«µÄÐÄÁéÔÙ²»Ïë×öÒ»Ë¿Ò»ºÁµÄË¼Ë÷Ê±£¬¾ÍÈÃÎÒ¾²¾²»Øµ½ÎÒµÄ¼ëÄÚ£¬ÒÔ»ØÒäÎªË¯é½£¬ÒÔ±¯°§Îª¸²±»£¬ÕâÊÇÎÒÎ¨Ò»µÄÃÀÀö¡£</figcaption>
+  <figure> <a href="/"><img src="images/js.jpg"></a>
+    <p><a href="/">JS</a></p>
+    <figcaption>JS一种直译式脚本语言，是一种动态类型、弱类型、基于原型的语言，内置支持类型。它的解释器被称为JavaScript引擎，为浏览器的一部分，广泛用于客户端的脚本语言，最早是在HTML网页上使用，用来给HTML网页增加动态功能。<figcaption>
   </figure>
 </div>
 <div class="blank"></div>
-<div class="text6">ÏàÊØ¡¤×£¸£</div>
+<div class="text6">web分享</div>
 <div class="hope">
   <ul>
     <div class="visitors">
