--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <!--nav begin-->
   <div id="nav">
     <ul>
-      <li><a href="/">主页</a></li>
-      <li><a href="#">技术分享</a></li>
+      <li><a href="#">主页</a></li>
+      <li><a href="html5.html">技术分享</a></li>
       <li><a href="#">技术格言</a></li>
       <li><a href="#">相册达人</a></li>
       <li><a href="#">音乐</a></li>
