--- a/demo/html5-mario/index.html
+++ b/demo/html5-mario/index.html
@@ -1,13 +1,17 @@
-
-<!doctype html><html><head><title>HTML5³¬¼¶ÂêÀö</title><link rel="shortcut icon" href=favicon.png /><link rel=stylesheet type="text/css" href="VNkyVaVxUV.css"><script type="text/javascript" src="jquery.js"></script>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>HTML5è¶…çº§çŽ›ä¸½</title>
+    <link rel="shortcut icon" href=favicon.png /><link rel=stylesheet type="text/css" href="VNkyVaVxUV.css"><script type="text/javascript" src="jquery.js"></script>
 
 </head>
 <body>
-<h4>·½Ïò¼ü£ºÒÆ¶¯  &nbsp;&nbsp;S¼ü£ºÌøÔ¾/½øÈë&nbsp;&nbsp;A¼ü£º¿ìÅÜ/Éä»÷</h4>
+<h4>Så¼€å§‹æˆ–è·³  &nbsp;&nbsp;kæ”»å‡»&nbsp;&nbsp;ä¸Š ä¸‹ å·¦ å³æ–¹å‘é”®</h4>
 <div class=spacing></div>
 <div class=main>
 <canvas id=canvas width=640 height=480>
-<p style="text-align: center;">Ôã¸â£¡ÄúµÄä¯ÀÀÆ÷²»Ö§³ÖHTML5 Canvas£¬Íæ²»ÁË£¬Çë³¢ÊÔÓÃFirefox¡¢Chrome¡¢IE9ä¯ÀÀÆ÷</p>
+<p style="text-align: center;"></p>
 </canvas>
 <div class=spacing></div>
 </div>
@@ -29,7 +33,7 @@
         <a class="bds_qzone"></a>
         <a class="bds_douban"></a>
         <a class="bds_xg"></a>
-        <span class="bds_more">¸ü¶à</span>
+        <span class="bds_more">Â¸Ã¼Â¶Ã </span>
 		<a class="shareCount"></a>
     </div>
 <script type="text/javascript" id="bdshare_js" data="type=tools" ></script>
