--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
         <meta content="" name="author"/>
-
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
         <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
@@ -22,6 +21,7 @@
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="stylesheet" href="css/index.css" />
     </head>
     <!-- END HEAD -->
 
@@ -46,6 +46,15 @@
                                 <img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo">
                                 <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo">
                             </a>
+                            <!--音乐播放器-->
+                           
+                         <span class="music">
+                         <audio src="music/斯卡布罗集市.mp3" autoplay loop="true">
+	<source src="music/斯卡.aac" type='audio/aac; codecs="aac"'>
+	<source src="resource/audio/OUTPUT.mp3" type='audio/mpeg'>
+	<source src="music/斯卡.ogg" type='audio/ogg; codecs="vorbis"'>
+</audio>
+                        </span>
                         </div>
                         <!-- End Logo -->
                     </div>
@@ -55,7 +64,7 @@
                         <div class="menu-container">
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">首页</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">分享</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">技术栈</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Vue</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">工作</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">音乐盒</a></li>
@@ -105,33 +114,52 @@
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
                         <div class="margin-b-60">
-                            <p>I'm Alex Teseira, orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        	<p>don’t lose the link（罗宾·米尔纳）</p>
+                            <p>1991年图灵奖得主米尔纳是一位程序设计语言专家，一生都在和各种程序设计语言打交道。他给年轻人的这句忠告：“don’t lose the link”——不要丢失连接！——堪称一句意味深长的双关语。表面上好像说的是程序设计领域的一个重要原则——任何高级语言程序在编译后都要经过连接，即把程序中引用的子程序从库中调入才能运行。但它又何尝不是一条成功法则？特别是在今天这样一个全球化、信息化的协作时代，取得任何的成功难道不都需要理论与实践的连接，需要人与机器、人与人之间的连接吗？</p>
+                            
                         </div>
 
                         <!-- Progress Box -->
                         <div class="progress-box">
-                            <h5>PHP <span class="color-heading pull-right">87%</span></h5>
+                            <h5>HTML5 <span class="color-heading pull-right">90%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="87"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="90"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>HTML5 <span class="color-heading pull-right">96%</span></h5>
+                            <h5>Css3 <span class="color-heading pull-right">85%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="96"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="85"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>JavaSript <span class="color-heading pull-right">52%</span></h5>
+                            <h5>JavaSript <span class="color-heading pull-right">88%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="52"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="88"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>Photoshop <span class="color-heading pull-right">77%</span></h5>
+                            <h5>Vue <span class="color-heading pull-right">77%</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="77"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>微信小程序 <span class="color-heading pull-right">60%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="60"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>Node.js <span class="color-heading pull-right">80%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="80"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>jQuery<span class="color-heading pull-right">90%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="90"></div>
                             </div>
                         </div>
                         <!-- End Progress Box -->
@@ -200,7 +228,7 @@
             </div>
         </div>
         <!-- End Experience -->
-		<div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >手机网站模板</a></div>
+		<!--<div class="copyrights">Collect from <a href="http://www.cssmoban.com/" ></a></div>-->
         <!-- Work -->
         <div id="work">
             <div class="container content-lg">
@@ -208,7 +236,7 @@
                     <div class="col-sm-3 sm-margin-b-30">
                         <div class="text-right sm-text-left">
                             <h2 class="margin-b-0">Works</h2>
-                            <p>I build the real value.</p>
+                            <p>我的日常生活</p>
                         </div>
                     </div>
                     <div class="col-sm-8 col-sm-offset-1">
@@ -495,7 +523,7 @@
         <script src="js/components/progress-bar.min.js" type="text/javascript"></script>
         <script src="js/components/masonry.min.js" type="text/javascript"></script>
         <script src="js/components/wow.min.js" type="text/javascript"></script>
-
+         <script src="js/components/index.js" type="text/javascript"></script>
     </body>
     <!-- END BODY -->
 </html>
