--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                             <a href="javascript:void(0);" class="work-popup-close">隐藏</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">我工作的地方</h3>
-                                                <span>Clean &amp; 每天都要努力，因为别人比你更努力</span>
+                                                <span>每天都要努力，因为别人比你更努力</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
@@ -282,7 +282,7 @@
                                             <a href="javascript:void(0);" class="work-popup-close">隐藏</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">西湖之行</h3>
-                                                <span>Clean &amp; 一家人，去西湖。想想都开心</span>
+                                                <span> 一家人，去西湖。想想都开心</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
@@ -311,7 +311,7 @@
                                             <a href="javascript:void(0);" class="work-popup-close">隐藏</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">团队</h3>
-                                                <span>Clean &amp; 前端，Ui,后台都排队呢</span>
+                                                <span> 前端，Ui,后台都排队呢</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
@@ -339,7 +339,7 @@
                                             <a href="javascript:void(0);" class="work-popup-close">隐藏</a>
                                             <div class="margin-b-30">
                                                 <h3 class="margin-b-5">UI</h3>
-                                                <span>Clean &amp;我们的UI大姐</span>
+                                                <span>我们的UI大姐</span>
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
